<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="app_settings" translatable="false">Настройки</string>
    <string name="app_search">Поиск</string>
    <string name="app_library">Медиатека</string>
    <string name="app_darktheme">Темная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="app_support">Написать в поддержку</string>
    <string name="app_agreement">Пользовательское соглашение</string>
    <string name="app_course_link" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="app_subject_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="app_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="app_user_mail" translatable="false">vit.iarosch@yandex.by</string>
    <string name="app_terms_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="app_nothing_found">Ничего не нашлось</string>
    <string name="app_something_went_wrong_connection">Проблемы со связью</string>
    <string name="app_something_went_check">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="app_reload">Обновить</string>
    <string name="app_latest_search">Вы искали</string>
    <string name="app_search_title">История поиска</string>
    <string name="app_clear_btn">Очистить историю</string>
    <string name="player_cover_image">Обложка альбома</string>
    <string name="app_trackTime">Длительность</string>
    <string name="app_country">Страна</string>
    <string name="app_genre">Жанр</string>
    <string name="app_releaseDate">Год</string>
    <string name="app_collectionName">Альбом</string>
    <string name="app_duration">0:00</string>
    <string name="app_favorite_tab">Избранные треки</string>
    <string name="app_playlists_tab">Плейлисты</string>
    <string name="app_library_empty">Ваша медиатека пуста</string>
    <string name="app_playslits_empty">Вы не создали \n ни одного плейлиста</string>
    <string name="app_new_playlist">Новый плейлист</string>
    <string name="app_btn_name">Название*</string>
    <string name="app_btn_description">Описание</string>
    <string name="app_btn_add">Создать</string>
    <string name="app_new_playlist_btn">Новый плейлист</string>
    <string name="app_edit_playlist_btn">Редактировать</string>
    <string name="app_title_dialog">Завершить создание плейлиста?</string>
    <string name="app_message_dialog">Все несохраненные данные будут потеряны</string>
    <string name="app_cancel_dialog">Отмена</string>
    <string name="app_finish_dialog">Завершить</string>
    <string name="app_delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="app_delete_playlist_dialog_message">Хотите удалить плейлист «%1$s»?</string>
    <string name="app_delete_dialog_confirm">ДА</string>
    <string name="app_delete_dialog_cancel">НЕТ</string>
    <string name="app_tracks_size">%1$s %2$s</string>
    <string name="app_playlist_duration">%1$s минут</string>
    <string name="app_add_to_playlist">Добавить в плейлист</string>
    <string name="app_no_photo_selected">Фото не выбрано</string>
    <string name="app_playlist_share">Поделиться</string>
    <string name="app_playlist_edit">Редактировать информацию</string>
    <string name="app_playlist_delete">Удалить плейлист</string>
    <string name="app_share_track_info">%1$d. %2$s - %3$s (%4$s)</string>
    <string name="app_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="app_btn_save">Сохранить</string>
    <string name="app_empty_playlist">В плейлисте %1$s нет добавленных треков</string>
    <string name="app_service_name">Service for playing music</string>
</resources>