<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/newPlaylist"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".newplaylist.ui.NewPlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/size_32" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_4"
        android:background="@null"
        android:padding="@dimen/padding_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="?attr/colorOnSecondary" />

    <TextView
        android:id="@+id/title"
        style="@style/HeadingTextStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_14"
        android:paddingBottom="@dimen/padding_12"
        android:text="@string/app_new_playlist"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"/>


    <FrameLayout
        android:id="@+id/btnAddContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_26"
        android:layout_marginHorizontal="@dimen/margin_8"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/name"
        android:background="@drawable/rounded_dashed_rectangle">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_photo"/>

    </FrameLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/size_32"
        app:layout_constraintTop_toBottomOf="@id/btnAddContainer"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        android:paddingHorizontal="@dimen/padding_16"
        android:background="@drawable/edit_text_state"
        android:hint="@string/app_btn_name"
        style="@style/EditTextRegularTextStyle"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        android:paddingHorizontal="@dimen/padding_16"
        android:background="@drawable/edit_text_state"
        android:hint="@string/app_btn_description"
        style="@style/EditTextRegularTextStyle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreatePlaylist"
        android:layout_width="0dp"
        android:layout_height="44dp" 
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        android:text="@string/app_btn_add"
        style="@style/AddButtonStyles"/>

</androidx.constraintlayout.widget.ConstraintLayout>

