<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yp_white"
    android:orientation="vertical"
    tools:context=".player.ui.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerContainer"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_16" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="trackTimeTag, collectionNameTag, releaseDateTag, primaryGenreNameTag, countryTag" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_4"
            android:background="@null"
            android:padding="@dimen/padding_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="?attr/colorOnSecondary" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:contentDescription="@string/player_cover_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:srcCompat="@drawable/ic_placeholder_large" />

        <TextView
            android:id="@+id/trackName"
            style="@style/HeadingTextStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_8"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/cover"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            style="@style/AdditionalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_8"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="The Beatles " />

        <ImageView
            android:id="@+id/saveToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/playButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:srcCompat="@drawable/ic_save_to_playlist" />

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/duration"
            app:layout_constraintEnd_toStartOf="@id/saveToFavorites"
            app:layout_constraintStart_toEndOf="@id/saveToPlaylist"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            android:layout_marginBottom="@dimen/margin_4"
            app:srcCompat="@drawable/ic_play" />

        <ImageView
            android:id="@+id/saveToFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:srcCompat="@drawable/ic_savetofavorite_inactive" />

        <TextView
            android:id="@+id/duration"
            style="@style/AdditionalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/app_duration"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/trackTime"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:text="@string/app_trackTime"
            android:textColor="@color/yp_gray"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/collectionName"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTag="trackTimeTag"
            app:layout_constraintWidth_max="124dp" />

        <TextView
            android:id="@+id/trackTimeValue"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/collectionNameValue"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="5:35" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:text="@string/app_collectionName"
            android:textColor="@color/yp_gray"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/releaseDate"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTag="collectionNameTag"
            app:layout_constraintWidth_max="124dp" />

        <TextView
            android:id="@+id/collectionNameValue"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:textColor="?attr/colorOnSecondary"
            android:visibility="visible"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/releaseDateValue"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:text="@string/app_releaseDate"
            android:textColor="@color/yp_gray"
            app:layout_constraintBottom_toTopOf="@id/primaryGenreName"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTag="releaseDateTag"
            app:layout_constraintWidth_max="124dp" />

        <TextView
            android:id="@+id/releaseDateValue"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/primaryGenreNameValue"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="1965" />

        <TextView
            android:id="@+id/primaryGenreName"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:text="@string/app_genre"
            android:textColor="@color/yp_gray"
            app:layout_constraintBottom_toTopOf="@id/country"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTag="primaryGenreNameTag"
            app:layout_constraintWidth_max="124dp" />

        <TextView
            android:id="@+id/primaryGenreNameValue"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/countryValue"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="Rock" />

        <TextView
            android:id="@+id/country"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:text="@string/app_country"
            android:textColor="@color/yp_gray"
            app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTag="countryTag"
            app:layout_constraintWidth_max="124dp" />

        <TextView
            android:id="@+id/countryValue"
            style="@style/PlayerDescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_32"
            android:ellipsize="end"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="Великобритания" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/playlistsBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/rounder" />

        <TextView
            android:id="@+id/bottomSheetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_add_to_playlist"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_12"
            android:paddingTop="@dimen/padding_18"
            android:paddingBottom="@dimen/padding_12"
            style="@style/MediumTextStyle"/>

        <Button
            android:id="@+id/newPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_36dp"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_24"
            android:layout_gravity="center"
            android:text="@string/app_new_playlist_btn"
            style="@style/PlaceholderButtonStyles"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBottomSheetPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/playlist_player_item"
            tools:itemCount="4"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

